<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F57C00"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/fragment_details_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/glavni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#01579B"
            android:orientation="vertical"
            android:textColor="#FFFFFF">


            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#01579B"
                android:orientation="vertical"
                android:textColor="#FFFFFF">

                <androidx.cardview.widget.CardView
                    android:id="@+id/game_poster_card"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="false">

                    <ImageView
                        android:id="@+id/cover_imageview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#01579B" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/roditelj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="#01579B"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/item_title_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#01579B"
                        android:paddingLeft="20dp"
                        android:paddingTop="8dp"
                        android:paddingRight="20dp"
                        android:text="TextView"
                        android:textColor="#ffffffff"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/save_button"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:background="@mipmap/save_icon" />

                    <ImageButton
                        android:id="@+id/delete_button"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:background="@mipmap/remove_icon" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/description_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#01579B"
                        android:paddingStart="20dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="24dp"
                        android:text="Description"
                        android:textColor="#ffffffff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/description_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6sp"
                        android:paddingStart="20dip"
                        android:paddingLeft="20dip"
                        android:paddingTop="10dip"
                        android:paddingEnd="20dip"
                        android:paddingRight="20dip"
                        android:paddingBottom="10dip"
                        android:text="TextView"
                        android:textColor="#ECECEC" />

                    <TextView
                        android:id="@+id/aboutgame_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#01579B"
                        android:paddingStart="20dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="24dp"
                        android:text="About game"
                        android:textColor="#ffffffff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/publisher_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="TextView"
                            android:textColor="#ECECEC" />

                        <TextView
                            android:id="@+id/esrb_rating_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="TextView"
                            android:textColor="#ECECEC" />

                        <TextView
                            android:id="@+id/platform_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="TextView"
                            android:textColor="#ECECEC" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/genre_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="TextView"

                            android:textColor="#ECECEC" />

                        <TextView
                            android:id="@+id/developer_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="TextView"
                            android:textColor="#ECECEC" />

                        <TextView
                            android:id="@+id/release_date_textview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="20dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:text="TextView"
                            android:textColor="#ECECEC" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/review_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#01579B"
                    android:paddingStart="20dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="24dp"
                    android:text="Rate the game"
                    android:textColor="#ffffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <RatingBar
                            android:id="@+id/rating_bar"
                            android:layout_marginStart="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:numStars="5"
                            android:stepSize="1"
                        />

                        <EditText
                            android:id="@+id/text_review"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="Leave a comment"
                            android:textColor="#ffffffff"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/review_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_marginStart="40dp"
                            android:background="@drawable/rate_me_button"
                            android:text="Rate me"
                            android:textAlignment="center" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/review_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>