<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/homeItem"
        android:icon="@drawable/home_icon"
        android:title="Home"
        />

    <item
        android:id="@id/gameDetailsItem"
        android:icon="@drawable/back_icon"
        android:title="Game details"
        />
</menu>