<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_home_parent"
    android:orientation="vertical"
  >


    <LinearLayout
        android:layout_width="match_parent"
...
    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:background="#FFFFFF"
        android:id="@+id/game_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
